_generated-doc/2.7/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_configuration]]link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.hosts]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.hosts[quarkus.hibernate-search-orm.elasticsearch.hosts]`

[.description]
--
The list of hosts of the Elasticsearch servers.
--|list of string 
|`localhost:9200`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.protocol]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.protocol[quarkus.hibernate-search-orm.elasticsearch.protocol]`

[.description]
--
The protocol to use when contacting Elasticsearch servers. Set to "https" to enable SSL/TLS.
--|`http`, `https` 
|`http`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.username]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.username[quarkus.hibernate-search-orm.elasticsearch.username]`

[.description]
--
The username used for authentication.
--|string 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.password]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.password[quarkus.hibernate-search-orm.elasticsearch.password]`

[.description]
--
The password used for authentication.
--|string 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.connection-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.connection-timeout[quarkus.hibernate-search-orm.elasticsearch.connection-timeout]`

[.description]
--
The timeout when establishing a connection to an Elasticsearch server.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`1S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.read-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.read-timeout[quarkus.hibernate-search-orm.elasticsearch.read-timeout]`

[.description]
--
The timeout when reading responses from an Elasticsearch server.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`30S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.request-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.request-timeout[quarkus.hibernate-search-orm.elasticsearch.request-timeout]`

[.description]
--
The timeout when executing a request to an Elasticsearch server. 
 This includes the time needed to wait for a connection to be available, send the request and read the response.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections[quarkus.hibernate-search-orm.elasticsearch.max-connections]`

[.description]
--
The maximum number of connections to all the Elasticsearch servers.
--|int 
|`20`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections-per-route]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections-per-route[quarkus.hibernate-search-orm.elasticsearch.max-connections-per-route]`

[.description]
--
The maximum number of connections per Elasticsearch server.
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.enabled]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.enabled[quarkus.hibernate-search-orm.elasticsearch.discovery.enabled]`

[.description]
--
Defines if automatic discovery is enabled.
--|boolean 
|`false`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.refresh-interval]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.refresh-interval[quarkus.hibernate-search-orm.elasticsearch.discovery.refresh-interval]`

[.description]
--
Refresh interval of the node list.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.thread-pool.size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.thread-pool.size[quarkus.hibernate-search-orm.elasticsearch.thread-pool.size]`

[.description]
--
The size of the thread pool assigned to the backend. 
 Note that number is *per backend*, not per index. Adding more indexes will not add more threads. 
 As all operations happening in this thread-pool are non-blocking, raising its size above the number of processor cores available to the JVM will not bring noticeable performance benefit. The only reason to alter this setting would be to reduce the number of threads; for example, in an application with a single index with a single indexing queue, running on a machine with 64 processor cores, you might want to bring down the number of threads. 
 Defaults to the number of processor cores available to the JVM on startup.
--|int 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.version-check.enabled]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.version-check.enabled[quarkus.hibernate-search-orm.elasticsearch.version-check.enabled]`

[.description]
--
Whether Hibernate Search should check the version of the Elasticsearch cluster on startup. 
 Set to `false` if the Elasticsearch cluster may not be available on startup.
--|boolean 
|`true`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status[quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status]`

[.description]
--
The minimal cluster status required.
--|`green`, `yellow`, `red` 
|`yellow`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status-wait-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status-wait-timeout]`

[.description]
--
How long we should wait for the status before failing the bootstrap.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-count]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-count[quarkus.hibernate-search-orm.elasticsearch.indexing.queue-count]`

[.description]
--
The number of indexing queues assigned to each index. 
 Higher values will lead to more connections being used in parallel, which may lead to higher indexing throughput, but incurs a risk of overloading Elasticsearch, i.e. of overflowing its HTTP request buffers and tripping link:https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers], leading to Elasticsearch giving up on some request and resulting in indexing failures.
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-size[quarkus.hibernate-search-orm.elasticsearch.indexing.queue-size]`

[.description]
--
The size of indexing queues. 
 Lower values may lead to lower memory usage, especially if there are many queues, but values that are too low will reduce the likeliness of reaching the max bulk size and increase the likeliness of application threads blocking because the queue is full, which may lead to lower indexing throughput.
--|int 
|`1000`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.max-bulk-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.max-bulk-size[quarkus.hibernate-search-orm.elasticsearch.indexing.max-bulk-size]`

[.description]
--
The maximum size of bulk requests created when processing indexing queues. 
 Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch, which may lead to higher indexing throughput, but incurs a risk of overloading Elasticsearch, i.e. of overflowing its HTTP request buffers and tripping link:https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers], leading to Elasticsearch giving up on some request and resulting in indexing failures. 
 Note that raising this number above the queue size has no effect, as bulks cannot include more requests than are contained in the queue.
--|int 
|`100`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.required-status]`

[.description]
--
The minimal cluster status required.
--|`green`, `yellow`, `red` 
|`yellow`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status-wait-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.required-status-wait-timeout]`

[.description]
--
How long we should wait for the status before failing the bootstrap.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-count]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-count[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.queue-count]`

[.description]
--
The number of indexing queues assigned to each index. 
 Higher values will lead to more connections being used in parallel, which may lead to higher indexing throughput, but incurs a risk of overloading Elasticsearch, i.e. of overflowing its HTTP request buffers and tripping link:https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers], leading to Elasticsearch giving up on some request and resulting in indexing failures.
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-size[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.queue-size]`

[.description]
--
The size of indexing queues. 
 Lower values may lead to lower memory usage, especially if there are many queues, but values that are too low will reduce the likeliness of reaching the max bulk size and increase the likeliness of application threads blocking because the queue is full, which may lead to lower indexing throughput.
--|int 
|`1000`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.max-bulk-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.max-bulk-size[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.max-bulk-size]`

[.description]
--
The maximum size of bulk requests created when processing indexing queues. 
 Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch, which may lead to higher indexing throughput, but incurs a risk of overloading Elasticsearch, i.e. of overflowing its HTTP request buffers and tripping link:https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers], leading to Elasticsearch giving up on some request and resulting in indexing failures. 
 Note that raising this number above the queue size has no effect, as bulks cannot include more requests than are contained in the queue.
--|int 
|`100`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.hosts]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.hosts[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.hosts]`

[.description]
--
The list of hosts of the Elasticsearch servers.
--|list of string 
|`localhost:9200`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.protocol]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.protocol[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.protocol]`

[.description]
--
The protocol to use when contacting Elasticsearch servers. Set to "https" to enable SSL/TLS.
--|`http`, `https` 
|`http`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.username]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.username[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.username]`

[.description]
--
The username used for authentication.
--|string 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.password]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.password[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.password]`

[.description]
--
The password used for authentication.
--|string 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.connection-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.connection-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.connection-timeout]`

[.description]
--
The timeout when establishing a connection to an Elasticsearch server.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`1S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.read-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.read-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.read-timeout]`

[.description]
--
The timeout when reading responses from an Elasticsearch server.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`30S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.request-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.request-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.request-timeout]`

[.description]
--
The timeout when executing a request to an Elasticsearch server. 
 This includes the time needed to wait for a connection to be available, send the request and read the response.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.max-connections]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.max-connections[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.max-connections]`

[.description]
--
The maximum number of connections to all the Elasticsearch servers.
--|int 
|`20`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.max-connections-per-route]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.max-connections-per-route[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.max-connections-per-route]`

[.description]
--
The maximum number of connections per Elasticsearch server.
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.discovery.enabled]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.discovery.enabled[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.discovery.enabled]`

[.description]
--
Defines if automatic discovery is enabled.
--|boolean 
|`false`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.discovery.refresh-interval]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.discovery.refresh-interval[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.discovery.refresh-interval]`

[.description]
--
Refresh interval of the node list.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.thread-pool.size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.thread-pool.size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.thread-pool.size]`

[.description]
--
The size of the thread pool assigned to the backend. 
 Note that number is *per backend*, not per index. Adding more indexes will not add more threads. 
 As all operations happening in this thread-pool are non-blocking, raising its size above the number of processor cores available to the JVM will not bring noticeable performance benefit. The only reason to alter this setting would be to reduce the number of threads; for example, in an application with a single index with a single indexing queue, running on a machine with 64 processor cores, you might want to bring down the number of threads. 
 Defaults to the number of processor cores available to the JVM on startup.
--|int 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.version-check.enabled]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.version-check.enabled[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.version-check.enabled]`

[.description]
--
Whether Hibernate Search should check the version of the Elasticsearch cluster on startup. 
 Set to `false` if the Elasticsearch cluster may not be available on startup.
--|boolean 
|`true`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.schema-management.required-status]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.schema-management.required-status[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.required-status]`

[.description]
--
The minimal cluster status required.
--|`green`, `yellow`, `red` 
|`yellow`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.schema-management.required-status-wait-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.required-status-wait-timeout]`

[.description]
--
How long we should wait for the status before failing the bootstrap.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexing.queue-count]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexing.queue-count[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexing.queue-count]`

[.description]
--
The number of indexing queues assigned to each index. 
 Higher values will lead to more connections being used in parallel, which may lead to higher indexing throughput, but incurs a risk of overloading Elasticsearch, i.e. of overflowing its HTTP request buffers and tripping link:https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers], leading to Elasticsearch giving up on some request and resulting in indexing failures.
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexing.queue-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexing.queue-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexing.queue-size]`

[.description]
--
The size of indexing queues. 
 Lower values may lead to lower memory usage, especially if there are many queues, but values that are too low will reduce the likeliness of reaching the max bulk size and increase the likeliness of application threads blocking because the queue is full, which may lead to lower indexing throughput.
--|int 
|`1000`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexing.max-bulk-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexing.max-bulk-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexing.max-bulk-size]`

[.description]
--
The maximum size of bulk requests created when processing indexing queues. 
 Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch, which may lead to higher indexing throughput, but incurs a risk of overloading Elasticsearch, i.e. of overflowing its HTTP request buffers and tripping link:https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers], leading to Elasticsearch giving up on some request and resulting in indexing failures. 
 Note that raising this number above the queue size has no effect, as bulks cannot include more requests than are contained in the queue.
--|int 
|`100`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.schema-management.required-status]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.schema-management.required-status[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.required-status]`

[.description]
--
The minimal cluster status required.
--|`green`, `yellow`, `red` 
|`yellow`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.schema-management.required-status-wait-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.required-status-wait-timeout]`

[.description]
--
How long we should wait for the status before failing the bootstrap.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.indexing.queue-count]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.indexing.queue-count[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.queue-count]`

[.description]
--
The number of indexing queues assigned to each index. 
 Higher values will lead to more connections being used in parallel, which may lead to higher indexing throughput, but incurs a risk of overloading Elasticsearch, i.e. of overflowing its HTTP request buffers and tripping link:https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers], leading to Elasticsearch giving up on some request and resulting in indexing failures.
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.indexing.queue-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.indexing.queue-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.queue-size]`

[.description]
--
The size of indexing queues. 
 Lower values may lead to lower memory usage, especially if there are many queues, but values that are too low will reduce the likeliness of reaching the max bulk size and increase the likeliness of application threads blocking because the queue is full, which may lead to lower indexing throughput.
--|int 
|`1000`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.indexing.max-bulk-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.indexing.max-bulk-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.max-bulk-size]`

[.description]
--
The maximum size of bulk requests created when processing indexing queues. 
 Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch, which may lead to higher indexing throughput, but incurs a risk of overloading Elasticsearch, i.e. of overflowing its HTTP request buffers and tripping link:https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers], leading to Elasticsearch giving up on some request and resulting in indexing failures. 
 Note that raising this number above the queue size has no effect, as bulks cannot include more requests than are contained in the queue.
--|int 
|`100`

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
