_generated-doc/3.2/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config.adoc

:summaryTableId: quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_configuration]]link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.hosts]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.hosts[quarkus.hibernate-search-orm.elasticsearch.hosts]`


[.description]
--
The list of hosts of the Elasticsearch servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_HOSTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`localhost:9200`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.protocol]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.protocol[quarkus.hibernate-search-orm.elasticsearch.protocol]`


[.description]
--
The protocol to use when contacting Elasticsearch servers. Set to "https" to enable SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_PROTOCOL+++`
endif::add-copy-button-to-env-var[]
-- a|
`http`, `https` 
|`http`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.username]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.username[quarkus.hibernate-search-orm.elasticsearch.username]`


[.description]
--
The username used for authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.password]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.password[quarkus.hibernate-search-orm.elasticsearch.password]`


[.description]
--
The password used for authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.connection-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.connection-timeout[quarkus.hibernate-search-orm.elasticsearch.connection-timeout]`


[.description]
--
The timeout when establishing a connection to an Elasticsearch server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`1S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.read-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.read-timeout[quarkus.hibernate-search-orm.elasticsearch.read-timeout]`


[.description]
--
The timeout when reading responses from an Elasticsearch server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`30S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.request-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.request-timeout[quarkus.hibernate-search-orm.elasticsearch.request-timeout]`


[.description]
--
The timeout when executing a request to an Elasticsearch server.

This includes the time needed to wait for a connection to be available,
send the request and read the response.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_REQUEST_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_REQUEST_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections[quarkus.hibernate-search-orm.elasticsearch.max-connections]`


[.description]
--
The maximum number of connections to all the Elasticsearch servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_MAX_CONNECTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_MAX_CONNECTIONS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`20`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections-per-route]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections-per-route[quarkus.hibernate-search-orm.elasticsearch.max-connections-per-route]`


[.description]
--
The maximum number of connections per Elasticsearch server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_MAX_CONNECTIONS_PER_ROUTE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_MAX_CONNECTIONS_PER_ROUTE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.enabled]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.enabled[quarkus.hibernate-search-orm.elasticsearch.discovery.enabled]`


[.description]
--
Defines if automatic discovery is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_DISCOVERY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_DISCOVERY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.refresh-interval]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.refresh-interval[quarkus.hibernate-search-orm.elasticsearch.discovery.refresh-interval]`


[.description]
--
Refresh interval of the node list.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_DISCOVERY_REFRESH_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_DISCOVERY_REFRESH_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.thread-pool.size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.thread-pool.size[quarkus.hibernate-search-orm.elasticsearch.thread-pool.size]`


[.description]
--
The size of the thread pool assigned to the backend.

Note that number is **per backend**, not per index.
Adding more indexes will not add more threads.

As all operations happening in this thread-pool are non-blocking,
raising its size above the number of processor cores available to the JVM will not bring noticeable performance
benefit.
The only reason to alter this setting would be to reduce the number of threads;
for example, in an application with a single index with a single indexing queue,
running on a machine with 64 processor cores,
you might want to bring down the number of threads.

Defaults to the number of processor cores available to the JVM on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_THREAD_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_THREAD_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.version-check.enabled]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.version-check.enabled[quarkus.hibernate-search-orm.elasticsearch.version-check.enabled]`


[.description]
--
Whether Hibernate Search should check the version of the Elasticsearch cluster on startup.

Set to `false` if the Elasticsearch cluster may not be available on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_VERSION_CHECK_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_VERSION_CHECK_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status[quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status]`


[.description]
--
The minimal https://www.elastic.co/guide/en/elasticsearch/reference/7.17/cluster-health.html[Elasticsearch cluster
status] required on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_REQUIRED_STATUS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_REQUIRED_STATUS+++`
endif::add-copy-button-to-env-var[]
-- a|
`green`, `yellow`, `red` 
|`yellow`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status-wait-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status-wait-timeout]`


[.description]
--
How long we should wait for the status before failing the bootstrap.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-count]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-count[quarkus.hibernate-search-orm.elasticsearch.indexing.queue-count]`


[.description]
--
The number of indexing queues assigned to each index.

Higher values will lead to more connections being used in parallel,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_QUEUE_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_QUEUE_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-size[quarkus.hibernate-search-orm.elasticsearch.indexing.queue-size]`


[.description]
--
The size of indexing queues.

Lower values may lead to lower memory usage, especially if there are many queues,
but values that are too low will reduce the likeliness of reaching the max bulk size
and increase the likeliness of application threads blocking because the queue is full,
which may lead to lower indexing throughput.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1000`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.max-bulk-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.max-bulk-size[quarkus.hibernate-search-orm.elasticsearch.indexing.max-bulk-size]`


[.description]
--
The maximum size of bulk requests created when processing indexing queues.

Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

Note that raising this number above the queue size has no effect,
as bulks cannot include more requests than are contained in the queue.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_MAX_BULK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_MAX_BULK_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`100`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.required-status]`


[.description]
--
The minimal https://www.elastic.co/guide/en/elasticsearch/reference/7.17/cluster-health.html[Elasticsearch cluster
status] required on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++`
endif::add-copy-button-to-env-var[]
-- a|
`green`, `yellow`, `red` 
|`yellow`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status-wait-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.required-status-wait-timeout]`


[.description]
--
How long we should wait for the status before failing the bootstrap.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-count]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-count[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.queue-count]`


[.description]
--
The number of indexing queues assigned to each index.

Higher values will lead to more connections being used in parallel,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-size[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.queue-size]`


[.description]
--
The size of indexing queues.

Lower values may lead to lower memory usage, especially if there are many queues,
but values that are too low will reduce the likeliness of reaching the max bulk size
and increase the likeliness of application threads blocking because the queue is full,
which may lead to lower indexing throughput.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1000`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.max-bulk-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.max-bulk-size[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.max-bulk-size]`


[.description]
--
The maximum size of bulk requests created when processing indexing queues.

Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

Note that raising this number above the queue size has no effect,
as bulks cannot include more requests than are contained in the queue.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_MAX_BULK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_MAX_BULK_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`100`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.hosts]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.hosts[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.hosts]`


[.description]
--
The list of hosts of the Elasticsearch servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_HOSTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`localhost:9200`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.protocol]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.protocol[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.protocol]`


[.description]
--
The protocol to use when contacting Elasticsearch servers. Set to "https" to enable SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_PROTOCOL+++`
endif::add-copy-button-to-env-var[]
-- a|
`http`, `https` 
|`http`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.username]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.username[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.username]`


[.description]
--
The username used for authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.password]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.password[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.password]`


[.description]
--
The password used for authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.connection-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.connection-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.connection-timeout]`


[.description]
--
The timeout when establishing a connection to an Elasticsearch server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`1S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.read-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.read-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.read-timeout]`


[.description]
--
The timeout when reading responses from an Elasticsearch server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`30S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.request-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.request-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.request-timeout]`


[.description]
--
The timeout when executing a request to an Elasticsearch server.

This includes the time needed to wait for a connection to be available,
send the request and read the response.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_REQUEST_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_REQUEST_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.max-connections]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.max-connections[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.max-connections]`


[.description]
--
The maximum number of connections to all the Elasticsearch servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_MAX_CONNECTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_MAX_CONNECTIONS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`20`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.max-connections-per-route]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.max-connections-per-route[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.max-connections-per-route]`


[.description]
--
The maximum number of connections per Elasticsearch server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_MAX_CONNECTIONS_PER_ROUTE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_MAX_CONNECTIONS_PER_ROUTE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.discovery.enabled]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.discovery.enabled[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.discovery.enabled]`


[.description]
--
Defines if automatic discovery is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_DISCOVERY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_DISCOVERY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.discovery.refresh-interval]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.discovery.refresh-interval[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.discovery.refresh-interval]`


[.description]
--
Refresh interval of the node list.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_DISCOVERY_REFRESH_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_DISCOVERY_REFRESH_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.thread-pool.size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.thread-pool.size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.thread-pool.size]`


[.description]
--
The size of the thread pool assigned to the backend.

Note that number is **per backend**, not per index.
Adding more indexes will not add more threads.

As all operations happening in this thread-pool are non-blocking,
raising its size above the number of processor cores available to the JVM will not bring noticeable performance
benefit.
The only reason to alter this setting would be to reduce the number of threads;
for example, in an application with a single index with a single indexing queue,
running on a machine with 64 processor cores,
you might want to bring down the number of threads.

Defaults to the number of processor cores available to the JVM on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_THREAD_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_THREAD_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.version-check.enabled]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.version-check.enabled[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.version-check.enabled]`


[.description]
--
Whether Hibernate Search should check the version of the Elasticsearch cluster on startup.

Set to `false` if the Elasticsearch cluster may not be available on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_VERSION_CHECK_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_VERSION_CHECK_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.schema-management.required-status]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.schema-management.required-status[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.required-status]`


[.description]
--
The minimal https://www.elastic.co/guide/en/elasticsearch/reference/7.17/cluster-health.html[Elasticsearch cluster
status] required on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_SCHEMA_MANAGEMENT_REQUIRED_STATUS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_SCHEMA_MANAGEMENT_REQUIRED_STATUS+++`
endif::add-copy-button-to-env-var[]
-- a|
`green`, `yellow`, `red` 
|`yellow`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.schema-management.required-status-wait-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.required-status-wait-timeout]`


[.description]
--
How long we should wait for the status before failing the bootstrap.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexing.queue-count]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexing.queue-count[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexing.queue-count]`


[.description]
--
The number of indexing queues assigned to each index.

Higher values will lead to more connections being used in parallel,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXING_QUEUE_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXING_QUEUE_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexing.queue-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexing.queue-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexing.queue-size]`


[.description]
--
The size of indexing queues.

Lower values may lead to lower memory usage, especially if there are many queues,
but values that are too low will reduce the likeliness of reaching the max bulk size
and increase the likeliness of application threads blocking because the queue is full,
which may lead to lower indexing throughput.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXING_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXING_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1000`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexing.max-bulk-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexing.max-bulk-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexing.max-bulk-size]`


[.description]
--
The maximum size of bulk requests created when processing indexing queues.

Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

Note that raising this number above the queue size has no effect,
as bulks cannot include more requests than are contained in the queue.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXING_MAX_BULK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXING_MAX_BULK_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`100`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.schema-management.required-status]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.schema-management.required-status[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.required-status]`


[.description]
--
The minimal https://www.elastic.co/guide/en/elasticsearch/reference/7.17/cluster-health.html[Elasticsearch cluster
status] required on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++`
endif::add-copy-button-to-env-var[]
-- a|
`green`, `yellow`, `red` 
|`yellow`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.schema-management.required-status-wait-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.required-status-wait-timeout]`


[.description]
--
How long we should wait for the status before failing the bootstrap.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.indexing.queue-count]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.indexing.queue-count[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.queue-count]`


[.description]
--
The number of indexing queues assigned to each index.

Higher values will lead to more connections being used in parallel,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.indexing.queue-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.indexing.queue-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.queue-size]`


[.description]
--
The size of indexing queues.

Lower values may lead to lower memory usage, especially if there are many queues,
but values that are too low will reduce the likeliness of reaching the max bulk size
and increase the likeliness of application threads blocking because the queue is full,
which may lead to lower indexing throughput.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1000`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.indexing.max-bulk-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-backend-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.indexing.max-bulk-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.max-bulk-size]`


[.description]
--
The maximum size of bulk requests created when processing indexing queues.

Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

Note that raising this number above the queue size has no effect,
as bulks cannot include more requests than are contained in the queue.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_MAX_BULK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_MAX_BULK_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`100`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
